Archive2/eb/08c635f995363d/output
main.cpp: In function ‘int main()’:
main.cpp:14:14: error: ‘void*’ is not a pointer-to-object type
 *rt.dataptr[0] = 1;
              ^
